# claudette

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  PRIVACY.md  README.md  SECURITY.md  deny.toml  docker-compose.yml  install.ps1  install.sh  tui-test-prompts-100-2026-05-20.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  model-benchmark.yml
.github/scripts/: package-archive.sh
.github/workflows/: ci.yml  release.yml
crates/claudette/: Cargo.toml
crates/claudette/examples/: 01-quick-tour.md  02-tool-groups.md  05-brain-regression-harness.md  05-code-generation.md  README.md  brownfield_abcc.rs  forge_e2e.rs  measure_baseline.rs  oauth_smoke.rs
crates/claudette/personas/: cto.md
crates/claudette/src/: agents.rs  antipatterns.rs  api.rs  brain_selector.rs  codet.rs  commands.rs  cto.rs  diff_preview.rs  doctor.rs  egress.rs  env_config.rs  executor.rs  firstrun.rs  google_auth.rs  hw.rs  image_attach.rs  lib.rs  main.rs  memory.rs  missions.rs  model_config.rs  prompt.rs  recall.rs  redact.rs  run.rs  scheduler.rs  secrets.rs  security_review.rs  setup.rs  status.rs  telegram_mode.rs  test_runner.rs  theme.rs  tool_groups.rs  tools.rs  transcript.rs  tts.rs  tui.rs  tui_events.rs  tui_executor.rs  (+2 more)
crates/claudette/src/api/: harmony.rs
crates/claudette/src/bench/: ab.rs  mod.rs  swebench.rs  templates.rs
crates/claudette/src/forge/: mod.rs  models_toml.rs  personas.rs  types.rs
crates/claudette/src/run/: cli_prompter.rs  compaction_policy.rs  forge_run.rs  recall_index.rs  repl.rs  research.rs  runtime_build.rs
crates/claudette/src/runtime/: compact.rs  config.rs  context_evict.rs  conversation.rs  hooks.rs  permissions.rs  session.rs  usage.rs
crates/claudette/src/tools/: calendar.rs  clipboard.rs  codegen.rs  dialog.rs  facts.rs  file_ops.rs  forge_tail.rs  fuzzy_apply.rs  git.rs  github.rs  gmail.rs  ide.rs  markets.rs  mission.rs  near_miss.rs  notes.rs  patch.rs  post_edit_check.rs  quality.rs  registry.rs  repomap.rs  search.rs  semantic.rs  shell.rs  telegram.rs  todos.rs  vision.rs  web_search.rs
crates/claudette/src/tui/: paste.rs  render.rs  space.rs  typewriter.rs
crates/claudette/tests/: battery_verify.rs  brain100_prompts.txt  brain100_shopping_scoreboard.md  brain100_test.sh  claudette100_prompts.txt  claudette100_test.sh  doc_consistency.rs  offline_egress.rs
crates/forge/: Cargo.toml
crates/forge/src/: lib.rs  models_toml.rs  personas.rs  pipeline.rs
docs/: README.md  architecture.md  comparison.md  configuration.md  decisions.md  deploy.md  first-success.md  forge.md  google_setup.md  hardware.md  import_sweep_2026_05_19.md  lancedb_decision_2026_05_19.md  life_agent.md  mtp_benchmark.md  power-user.md  quickstart.md  research.md  show-me.md  sprint_import_2026_05_19.md  sprint_life_agent.md  troubleshooting.md  usage.md
docs/archive/: README.md  lancedb_decision_2026_05_19.md  life_agent.md  sprint_import_2026_05_19.md  tui-test-prompts-2026-05-16.md
editor/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
editor/vscode/src/: extension.ts
examples/: 01-quick-tour.md  02-tool-groups.md  03-telegram-setup.md  04-morning-briefing.md  05-code-generation.md  06-brain-regression-harness.md  README.md  brownfield_abcc.rs  brownfield_smoke.rs  measure_baseline.rs
personas/: codex7.md  eva.md  sentinel9.md
runs/codev-2026-07-11/: PLAN.md  design-context-eviction.md  design-post-edit-check.md  draft-hw-recs.md
runs/codev-2026-07-11/battery-4b-postedit-on/: failures.txt  summary.txt
runs/codev-2026-07-11/battery-4b-postedit-on-CONTAMINATED/: failures.txt  summary.txt
runs/codev-2026-07-11/battery-byteshape-baseline/: failures.txt  summary.txt
runs/codev-2026-07-11/battery-byteshape-postedit-on/: failures.txt  summary.txt
runs/codev-2026-07-11/cards/: W1.md  W2.md  W4a-attempt2.md  W4a.md  W4b-attempt2.md  W4b.md  W5a.md
runs/eval-2026-05-29/battery/: .gitignore  CANDIDATES.md  CHAMPION-DOSSIER.md  MODEL-COMPARISON.md  REPORT.md  SCORES-baseline-prefix.tsv  SCORES-champ-bs-mtpgpu2-64k-ext.tsv  SCORES-champ-bs-mtpgpu2-64k.tsv  SCORES-champ-bs-mtpgpu2-lms-ext.tsv  SCORES-champ-bs-mtpgpu2-lms.tsv  SCORES-champ-iq4xs-lms-ext.tsv  SCORES-champ-iq4xs-lms.tsv  SCORES-champ-mtp-q4kxl-llsrv-ext.tsv  SCORES-champ-q4kxl-lms-ext.tsv  SCORES-champ-q4kxl-lms.tsv  SCORES-coder30b-BROKEN-template-32k.tsv  SCORES-glm47-flash.tsv  SCORES-gpt-oss-20b.tsv  SCORES-gptoss20b-v0160-ext.tsv  SCORES-gptoss20b-v0160.tsv  SCORES-granite41-8b.tsv  SCORES-postfix.tsv  SCORES-q3-35b-v0160-20260709.tsv  SCORES-q3-35b-v0160-ext.tsv  SCORES-q3-35b-v0160.tsv  SCORES-q3-35b.tsv  SCORES-q4-35b.tsv  SCORES-qwen35-4b-v0160-ext.tsv  SCORES-qwen35-4b-v0160.tsv  SCORES-qwen35-4b.tsv  SCORES-qwen35-9b-v0160-ext.tsv  SCORES-qwen35-9b-v0160.tsv  SCORES-qwen35-9b.tsv  SCORES-qwen36-27b.tsv  SCORES-qwen3coder30b-ext.tsv  SCORES-qwen3coder30b.tsv  SCORES-screen-champ-mtp-q4kxl-llsrv.tsv  SCORES-screen-gemma4-coder-fable5.tsv  SCORES-screen-glm47-flash.tsv  SCORES-screen-q36-official-v0160.tsv  (+19 more)
runs/eval-2026-05-29/battery/prompts/: A1.txt  (+56 more)
scripts/: forge-smoke.ps1  record-demo.md
src/: agents.rs  api.rs  brain_selector.rs  briefing.rs  clock.rs  codet.rs  commands.rs  executor.rs  google_auth.rs  image_attach.rs  lib.rs  main.rs  memory.rs  model_config.rs  prompt.rs  recall.rs  run.rs  scheduler.rs  secrets.rs  telegram_mode.rs  test_runner.rs  theme.rs  tool_groups.rs  tools.rs  tts.rs  tui.rs  tui_events.rs  tui_executor.rs  tui_worker.rs  voice.rs
src/runtime/: compact.rs  config.rs  conversation.rs  hooks.rs  prompt.rs  sandbox.rs  session.rs
src/tools/: calendar.rs  codegen.rs  facts.rs  file_ops.rs  git.rs  github.rs  gmail.rs  ide.rs  markets.rs  notes.rs  recall.rs  schedule.rs  search.rs  shell.rs  telegram.rs  web_search.rs
tests/: brain100_lmstudio_shopping.sh  brain100_prompts.txt  brain100_sandbox10.sh  brain100_test.sh  probe_iter2_shape.py
(+167 files in other folders)
