[workspace]
resolver = "2"
members = [
    "crates/claudette",
    "crates/forge",
]

# `claudette` is the only published crate. `forge` is workspace-internal
# plumbing — see crates/forge/Cargo.toml `publish = false` and the 0.4.1
# sprint plan (Phase 1: Forge fold).

[profile.release]
opt-level = "z"
lto = true
strip = true
# Removes unwind landing pads from the release binary — smaller binary,
# tighter security posture (panics never cross the FFI boundary into
# attacker-controlled code), and matches what `panic_abort` workloads
# actually do at runtime. The crate has no `#[should_panic]` integration
# tests that depend on unwinding, and the runtime treats panics as
# fatal anyway (the agent loop logs and exits the iteration).
panic = "abort"
