[workspace]
resolver = "2"
members = [
    "crates/claudette",
]

# `claudette` is the only crate. The dormant `forge` plumbing was folded
# into `crates/claudette/src/forge/` in v0.5.1 so the published manifest no
# longer carries a path-only workspace dependency (cargo rejects those at
# `cargo publish` time).

[profile.release]
opt-level = "z"
lto = true
strip = true
# Removes unwind landing pads from the release binary — smaller binary,
# tighter security posture (panics never cross the FFI boundary into
# attacker-controlled code), and matches what `panic_abort` workloads
# actually do at runtime. The crate has no `#[should_panic]` integration
# tests that depend on unwinding, and the runtime treats panics as
# fatal anyway (the agent loop logs and exits the iteration).
panic = "abort"
