[workspace]
resolver = "2"
members = [
    "crates/claudette",
]

# `claudette` is the only crate. The dormant `forge` plumbing was folded
# into `crates/claudette/src/forge/` in v0.5.1 so the published manifest no
# longer carries a path-only workspace dependency (cargo rejects those at
# `cargo publish` time).

[profile.release]
opt-level = "z"
lto = true
strip = true
# Removes unwind landing pads from the release binary — smaller binary and a
# tighter security posture (panics never cross the FFI boundary into
# attacker-controlled code). NOTE: with `abort`, ANY panic terminates the whole
# process immediately — there is no `catch_unwind` recovery and the agent loop
# does NOT survive a panicked turn. So a panic on untrusted/external input is a
# hard crash: keep fallible parsing/slicing panic-free (e.g. char-boundary
# clamps over raw byte slices) rather than relying on unwind recovery.
panic = "abort"
