[package]
name = "claudette"
version = "0.4.1"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
description = "Local-first AI personal secretary for Ollama. Telegram bot, voice, persistent scheduler, Gmail and Calendar. Single-binary Rust."
readme = "../../README.md"
repository = "https://github.com/mrdushidush/claudette"
homepage = "https://github.com/mrdushidush/claudette"
documentation = "https://github.com/mrdushidush/claudette#readme"
authors = ["mrdushidush <mrdushidush@gmail.com>"]
keywords = ["ollama", "llm", "assistant", "telegram", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "claudette"
path = "src/main.rs"

[lib]
name = "claudette"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
anyhow = "1.0"
dotenvy = "0.15"
toml = "1"
colored = "3"
glob = "0.3"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
scopeguard = "1"
# Vision input: read OS clipboard bitmaps (Ctrl+V) and re-encode the raw
# RGBA pixels arboard hands back into PNG so vision models can ingest it.
# `image` is restricted to the PNG codec to keep the dependency footprint
# small (no JPEG/WebP/GIF transitive crates pulled).
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
# OS-entropy source for the OAuth loopback state parameter. Kept to
# `getrandom` (small, widely deployed) instead of pulling all of `rand`.
getrandom = "0.3"
# Cross-session recall feature: SQLite for the embedded vector store at
# ~/.claudette/recall.sqlite. `bundled` ships its own libsqlite3 so users
# don't need a system sqlite — same trade-off as keeping the whole CLI a
# single-binary install. No `chrono`/`serde` features pulled — the only
# columns we round-trip are TEXT (timestamp+role+snippet) and BLOB (vec).
rusqlite = { version = "0.32", features = ["bundled"] }

[lints.rust]
unsafe_code = "forbid"

# Clippy groups: `all` and `pedantic` both at `warn`. Per-lint
# allows below are for lints that either (a) fire across the whole
# crate on stylistic preference and would bloat the diff to silence
# at every call site, or (b) have a known project-wide reason they
# are permitted. The default policy is still "clippy::pedantic — warn,
# fix what fires"; these are the exceptions, each of which a reviewer
# would otherwise spend time asking about.
#
# `cast_*`, `struct_excessive_bools`, `missing_panics_doc`,
# `missing_errors_doc` are the category (b) exceptions that could
# plausibly be removed in a future refactor — if you're tackling them,
# remove the allow and fix the fires in the same PR.
[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
wildcard_imports = "allow"
items_after_statements = "allow"
unused_self = "allow"
needless_pass_by_value = "allow"
single_match_else = "allow"
unreadable_literal = "allow"
similar_names = "allow"
if_not_else = "allow"
match_same_arms = "allow"
uninlined_format_args = "allow"
# Upstream (forked-runtime) style:
doc_markdown = "allow"
too_many_arguments = "allow"
