[package]
name = "forge"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
description = "Workspace-internal plumbing for forge-mode (persona loader, models.toml role-map, complexity router). Dormant in 0.4.1 — not surfaced from claudette."
publish = false

[lib]
name = "forge"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

[lints.rust]
unsafe_code = "forbid"
